# pybind11-cuda

./: MANIFEST.in  README.md  build.sh  setup.py  testop.py
pydemo/: CMakeLists.txt  __init__.py  hello.cu  hello.h  main.cpp  pybind.cpp  tensor.h
